# Lab01_PART2_NUSP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  raw_layer_mock.csv
gx/gx/expectations/: anac_expectation_suite.json
src/: config.yaml  main.py  utils.py
src/ingestion/: job.py  kaggle_client.py
src/load/: db_connector.py  job.py
src/processing/: job.py  report.py  schema.py  visualization.py
src/quality/: validate_raw.py
